tests/neg/erased-implicit-b.scala
object Test {
  def foo erased (implicit a: Double) = 42   // error
}
